--- a/package.json
+++ b/package.json
@@ -3,49 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@deemlol/next-icons": "^0.1.9",
-    "@hookform/resolvers": "^5.1.1",
-    "@nextui-org/react": "^2.6.11",
-    "@prisma/client": "^6.9.0",
-    "@radix-ui/themes": "^3.2.1",
-    "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.9.0",
-    "classnames": "^2.5.1",
-    "img": "^3.0.3",
-    "mysql2": "^3.14.1",
-    "next": "15.3.3",
-    "next-connect": "^1.0.0",
-    "node-cron": "^4.1.0",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1",
-    "react-toastify": "^11.0.5",
-    "sequelize": "^6.37.7",
-    "swr": "^2.3.3",
-    "zod": "^3.25.57"
+    "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.5",
+    "formik": "^2.4.5",
+    "mongoose": "^8.1.3",
+    "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/node-fetch": "^2.6.12",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-toastify": "^4.0.2",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "prisma": "^6.9.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
