--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@deemlol/next-icons": "^0.1.9",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tailwindcss/postcss": "^4.1.10",
     "axios": "^1.6.7",
-    "framer-motion": "^11.0.5",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.5",
     "mongoose": "^8.1.3",
-    "next": "14.1.0",
+    "next": "^14.2.30",
     "next-auth": "^4.24.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.57.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
@@ -30,8 +34,8 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   }
 }
