--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "yup": "^1.6.1"
   },
