--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
